add/remove watchlist ok